# protocolImplementation

./: README.md  buildAll.sh  buildSendAll.sh
appraisal/: Appraisal.hs  AppraiserMain.hs  OuterAppraiser.hs  appraisal.cabal  appraiser.cabal  appraiserLibraryCabal  appraisermain.cabal  buildSendAppraiser.sh  cleansandbox.sh  sandboxinit.sh
armored-config/: config.cabal
armored-config/ArmoredConfig/: Environment.hs
attestation/: Attestation.hs  AttesterMain.hs  attestation.cabal  attester.cabal  attesterLibraryCabal  buildSendAttester.sh  sandboxinit.sh
certificateAuthority/: CAMain.hs  buildSendCA.sh  certificateAuthority.cabal  sandboxinit.sh
negotiationtools/: AttesterProtocol.hs  CommTools.hs  CommunicationNegotiator.hs  ExampleArmoredConfig.hs  ExampleArmoredConfig.txt  HttpChannel.hs  Protocol.hs  ProtocolDefinitions.hs  ProtocolMain.hs  negotiationtools.cabal
outerappraiser/: AppraiserProtocol.hs  OuterAppraiserMain.hs  buildSend.sh  buildSend.sh~  outerappraiser.cabal  sandboxinit.sh
outerattester/: AttesterProtocol.hs  OuterAttesterMain.hs  buildSend.sh  buildSend.sh~  outerattester.cabal  sandboxinit.sh
protoMonad/: CAMain.hs  CAProtoMain.hs  Keys.hs  ProtoActions.hs  ProtoActionsBackup.hs  ProtoMonad.hs  ProtoTypesA.hs  TPMUtil.hs  protoMonad.cabal  protoMonad.cabal~
protoMonad/needham/: AMain.hs  BMain.hs  ProtoMain.hs
provisioning/: Provisioning.hs  ProvisioningMain.hs  buildSendProvisioning.sh  buildSendProvisioning.sh~  provisioning.cabal
remoteMonad/: .MeasurerComm.hs.swp  Measurements.hs  MeasurerComm.hs  remote-monad.cabal
remoteMonad/examples/: SocketClient.hs
shared/: ArmoredTypes.hs  CommTools.hs  Demo3Shared.hs  Demo3SharedNOVCHAN.hs  Demo3Vchan.hs  ProtoTypes.hs  TypeInstancesInternal.hs  TypesInternal.hs  cleansandbox.sh  domains.txt  sandboxinit.sh  sharedarmor.cabal
shared/bytestringJSON/: ByteStringJSON.hs  bytestring-json.cabal  bytestringJSON.cabal  cleansandbox.sh  sandboxinit.sh
