Name:                   appraisal
Version:                0.1
Synopsis:               appraisal library
License:                BSD3
License-file:           LICENSE
Author:                 Adam Petz
Maintainer:             ampetz@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple

library
  exposed-modules:      Appraisal
  hs-source-dirs:       ./, ../protoMonad, ../provisioning
  build-depends:        base >= 4,
                        tpm-emulator,
                        VChanUtil,
                        RSA,
                        SHA,
                        binary,
                        transformers,
                        containers,
                        bytestring,
                        crypto-api,
                        mtl,
                        cipher-aes,
                        sharedarmor,
                        random
                        
  --Main-is: AppraiserMain.hs
  ghc-options: -O

--  default-language:     Haskell2010