Name:                   appraisermain
Version:                0.1
Synopsis:               appraiser main executable
License:                BSD3
License-file:           LICENSE
Author:                 Adam Petz
Maintainer:             ampetz@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple

library
  exposed-modules:      AppraiserMain
  hs-source-dirs:       ./, ../protoMonad, ../provisioning
  build-depends:        base >= 4,
                        mtl,
                        transformers,
                        cipher-aes,
                        crypto-api,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network,
                        random,
                        tpmEmulator,
                        VChanUtil,
                        RSA,
                        SHA
                        
  --Main-is: AppraiserMain.hs
  ghc-options: -O

  default-language:     Haskell2010