Name:                   attestation
Version:                0.1
Synopsis:               appraiser library
License:                BSD3
License-file:           LICENSE
Author:                 Adam Petz
Maintainer:             ampetz@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple

library
  exposed-moduels:      Attestation
  hs-source-dirs:       ./, ../protoMonad, ../provisioning
  build-depends:        
                        
                        
 -- Main-is: AttesterMain.hs
  ghc-options: -O
