Name:                   attestation
Version:                0.1
Synopsis:               appraiser library
License:                BSD3
License-file:           LICENSE
Author:                 Adam Petz
Maintainer:             ampetz@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple

library
  exposed-modules:      Attestation
  hs-source-dirs:       ./, ../protoMonad, ../provisioning
  build-depends:        base,
                        bytestring,
                        containers,
                        transformers,
                        binary,
                        random,
                        RSA,
                        tpmEmulator,
                        VChanUtil,
                        mtl,
                        SHA,
                        crypto-api
                        
 -- Main-is: AttesterMain.hs
  ghc-options: -O
