Name:                   attestation
Version:                0.1
Synopsis:               appraiser library
License:                BSD3
License-file:           LICENSE
Author:                 Adam Petz
Maintainer:             ampetz@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple

library
  exposed-modules:      Attestation
  build-depends:        base,
                        bytestring,
                        containers,
                        transformers,
                        binary,
                        random,
                        RSA,
                        tpm-emulator,
                        VChanUtil,
                        bytestring-json,
                        mtl,
                        SHA,
                        crypto-api,
                        aeson,
                        scotty,
                        unordered-containers,
                        http-streams,
                        network-info,
                        network-uri,
                        stm,
                        io-streams,
                        network,
                        HTTP,
                        cipher-aes,
                        sharedarmor,
                        protoMonad


 -- Main-is: AttesterMain.hs
  ghc-options: -O -threaded
