Name:                   certificateAuthority
Version:                0.1
Synopsis:               ca main executable
License:                BSD3
License-file:           LICENSE
Author:                 Adam Petz
Maintainer:             ampetz@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple

executable              CA
  hs-source-dirs:       ./, ../provisioning
  build-depends:        base >= 4,
                        mtl,
                        transformers,
                        cipher-aes,
                        crypto-api,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil,
                        tpm-emulator,
                        sharedarmor,
                        protoMonad
  Main-is: CAMain.hs
  ghc-options: -O -threaded
