name:                negotiation-tools
version:             0.0.1
synopsis:            This is a cat because it's all patches.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Paul Kline
Maintainer:          Paul Kline
-- copyright:
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     
                       Protocol,
                       CommunicationNegotiator
                       
  -- other-modules:     
 -- other-extensions:    TypeSynonymInstances,
   --                    FlexibleInstances,
     --                  DeriveDataTypeable,
       --                ExistentialQuantification
  build-depends:      stm,
                      tpm-emulator,
                      base,
                      time,
                      random,
                      text,
                      scotty,
                      bytestring,
                      network-info,
                      aeson,
                      io-streams,
                      mtl,
                      HTTP,
                      network,
                      SHA,
                      containers,
                      sharedarmor,
                      VChanUtil,
                      attestation,
                      appraisal,
                      http-streams
                      
                      

  hs-source-dirs:     ./
  default-language:    Haskell2010
