Name:                   protoMonad
Version:                0.1
Synopsis:               protoMonad library
License:                BSD3
License-file:           LICENSE
Author:                 Adam Petz
Maintainer:             ampetz@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple

library
  exposed-modules:      Keys, CAProtoMain, ProtoActions, ProtoMonad, TPMUtil, Provisioning
  hs-source-dirs:       ./, ../provisioning
  other-modules:
  build-depends:        base >= 4,
                        tpm-emulator,
                        VChanUtil,
                        RSA,
                        SHA,
                        binary,
                        transformers,
                        containers,
                        bytestring,
                        crypto-api,
                        mtl,
                        cipher-aes,
                        sharedarmor,
                        random


  ghc-options: -O

--  default-language:     Haskell2010
