Name:                   protoMonad
Version:                0.1
Synopsis:               protoMonad library
License:                BSD3
License-file:           LICENSE
Author:                 Adam Petz
Maintainer:             ampetz@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple

library
  exposed-modules:      Keys, CAProtoMain, ProtoActions, ProtoMonad, TPMUtil, Provisioning
  hs-source-dirs:       ./, ../provisioning
  other-modules:
  build-depends:        base >= 4,
                        binary,
                        bytestring,
                        cipher-aes,
                        containers,
                        crypto-api,
                        mtl,
                        random,
                        remote-monad,
                        RSA,
                        SHA,
                        sharedarmor,
                        tpm-emulator,
                        transformers,
                        VChanUtil


  ghc-options: -O -threaded

--  default-language:     Haskell2010
