Name:                   provisioning
Version:                0.1
Synopsis:               provisioning(exporting EK, golden pcr composites, etc) main executable
License:                BSD3
License-file:           LICENSE
Author:                 Adam Petz
Maintainer:             ampetz@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple

executable              Provisioning
  hs-source-dirs:       ./, ../protoMonad
  build-depends:        base >= 4,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        crypto-api,
                        tpm-emulator,
                        VChanUtil,
                        bytestring-json

  Main-is: ProvisioningMain.hs
  ghc-options: -O

library
  exposed-modules:      Provisioning
  other-modules:
  hs-source-dirs:       ./, ../protoMonad
  build-depends:        base >= 4,
                        tpm-emulator,
                        RSA,
                        SHA,
                        binary,
                        transformers,
                        containers,
                        bytestring,
                        crypto-api,
                        mtl,
                        cipher-aes,
                        sharedarmor,
                        random,
                        bytestring-json

  ghc-options: -O
