name:                sharedarmor
version:             0.0.1
synopsis:            Some shared things for armored software
-- description:
license:             BSD3
license-file:        LICENSE
author:              Paul Kline
Maintainer:          Paul Kline
-- copyright:
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:    ArmoredTypes, CommTools
  other-modules:      TypesInternal,
                      TypeInstancesInternal
 -- other-extensions:    TypeSynonymInstances,
   --                    FlexibleInstances,
     --                  DeriveDataTypeable,
       --                ExistentialQuantification
  build-depends:      base,
                      mtl,
                      bytestring,
                      unordered-containers,
                      text,
                      bytestring-json,
                      transformers,
                      aeson,
                      random,
                      RSA,
                      binary,
                      tpm-emulator,
                      VChanUtil,
                      http-streams,
                      io-streams,
                      network,
                      HTTP,
                      network-info,
                      network-uri,
                      scotty,
                      stm

  ghc-options: -threaded
  hs-source-dirs:
  default-language:    Haskell2010
